fix: align action icons with bottom bar

--- a/src/components/MainScreen.css
+++ b/src/components/MainScreen.css
@@ -158,23 +158,29 @@
   left: 0;
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  place-items: center;
 }
 
 .menu-item {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   color: #193455;
   font-weight: bold;
+  height: 100%;
 }
 
 .menu-button {
   background: none;
   border: none;
   padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .menu-button img {
